desktop/css/desktop.main.css
/* ... */
  .jstree li a {
    width: 90% !important;
  }
  .jstree li a:hover {
    background-color: var(--form-bg-color);
  }
  .vakata-context {
    background: var(--form-bg-color);
    box-shadow: unset;
    z-index: 9999;
    border: none;
  }
  .vakata-context > li > a {
    color: var(--txt-color) !important;
    text-shadow: unset !important;

  }
  .vakata-context-hover > a {
    background: var(--btnEq-default-color) !important;
    box-shadow: unset!important;
  }

  .vakata-contextmenu-sep, .vakata-context-separator > a {
    background: rgb(var(--bg-color)) !important;
    border-color: rgb(var(--bg-color)) !important;
  }

/* ____________________SCENARIO */
  .scenario_link_getUsedBy .label, .scenario_link_getUse .label {
    display: inline-block;
    margin: 2px;
  }
  #div_scenarioElement  {
    padding-top: 5px;
  }
  #div_scenarioElement > .element {
    margin-bottom: 3px;
  }

  /* by type colors */
  .elementIF { background-color: var(--scBlocIF) !important; }
  .subElementELSE { background-color: var(--scBlocElse) !important; }
  .elementFOR { background-color: var(--scBlocFOR) !important; }
  .elementIN { background-color: var(--scBlocIN) !important; }
  .elementAT { background-color: var(--scBlocAT) !important; }
  .elementCODE { background-color: var(--scBlocCODE) !important; }
  .elementCOM { background-color: var(--scBlocCOM) !important; }
  .elementACTION,
  .expressionACTION {
    background-color: var(--scBlocACTION) !important;
  }

  .subElement .element.elementCollapse .btn {
    opacity: 0;
  }

  /* bloc sep, IF different */
  .subElement .element.elementCollapse {
    border-left: 4px solid var(--scBlocSep);
  }
  .subElement .elementIF.elementCollapse:hover {
    border-left-color: var(--sc-form-color) !important;
  }

  .subElement .element:not(.elementIF) {
    width : calc(100% - 5px);
    margin-top: 4px;
  }
  .subElement .element:not(.elementIF):not(.elementCollapse) {
    border: 2.5px dotted var(--scBlocSep);
    border-left: 4px solid var(--scBlocSep);
    border-right: none;
    transition: border-left 0.4s cubic-bezier(.25,.8,.25,1);
  }
  .subElement .element:not(.elementIF):hover {
    border-left-color: var(--sc-form-color) !important;
    transition: border-left-color 1s cubic-bezier(.25,.8,.25,1);
  }

  /* IF */
  .subElement .elementIF:not(.elementCollapse) {
    border: 2.5px dotted var(--scBlocSep);
    border-left: none;
    border-right: none;
    transition: border-left 0.4s cubic-bezier(.25,.8,.25,1);
  }
  .subElement .elementIF:not(.elementCollapse) > .subElementIF,
  .subElement .elementIF:not(.elementCollapse) > .subElementTHEN,
  .subElement .elementIF:not(.elementCollapse) > .subElementELSE {
    border-left: 4px solid var(--scBlocSep);
  }
  .subElementACTION > .expressions > .expressionACTION {
    border-left: 3px solid var(--scBlocSep);
    border-radius: 0 !important;
  }
  .subElement > .elementIF {
    border-left: 3px solid transparent;
  }
  .subElement .elementIF:hover:not(.elementCollapse) > .subElementIF,
  .subElement .elementIF:not(.elementCollapse) .subElementTHEN:hover,
  .subElement .elementIF:not(.elementCollapse) .subElementELSE:hover{
    border-left: 4px solid var(--scBlocSep);
    border-left-color: var(--sc-form-color) !important;
    transition: border-left-color 1s cubic-bezier(.25,.8,.25,1);
  }


  /* collapses comment bloc: */
  .elementCOM.elementCollapse:not(:hover) .subElement legend {
    display: none
  }
  .elementCOM.elementCollapse:not(:hover) .bt_sortable,
  .elementCOM.elementCollapse:not(:hover) .bt_collapse {
    opacity: 0;
  }

  .expressionACTION .col-xs-1 input[type="checkbox"] {
    top: 5px !important;
  }
  .expressionACTION .input-group {
    top: 2px !important;
  }
  .expressionACTION {
    width: calc(100% - 6px);
  }
  .subElementCODE,
  .subElementCOMMENT {
    padding-right: 4px;
    padding-left: 4px;
  }
  .element legend {
    background-color: transparent !important;
    color: var(--sc-lightTxt-color) !important;
    text-align: center !important;
    margin: 0 !important;
    min-width: 5.5em;
    letter-spacing: -0.5px;
  }

  .element .btn,
  .element .btn:focus,
  .element .btn:active,
  .element .dropdown-menu {
    color: var(--linkHoverLight-color) !important;
    background-color: var(--sc-formTxt-color) !important;
  }

  /* scenarios dropdowns */
  .element button.dropdown-toggle {
    font-size:12px;
    color:  var(--linkHoverLight-color) !important;
    background-color: var(--sc-formTxt-color) !important;
    height: 22px;
    padding-left: 5px;
    padding-top: 2px;
    margin-left: 5px;
  }
  .element button.dropdown-toggle:hover {
    color: var(--sc-lightTxt-color) !important;
  }
  .element button.dropdown-toggle:focus,
  .element button.dropdown-toggle a:focus {
    color:  var(--linkHoverLight-color) !important;
    background-color: var(--sc-formTxt-color) !important;
  }
  .subElementFields button.dropdown-toggle .caret {
    position: relative;
    right: -3px !important;
    top: -1px !important;
    border-top-color: var(--linkHoverLight-color) !important;
  }
  .subElementFields ul.dropdown-menu {
    border-bottom: none !important;
  }

  .element .dropdown-submenu.open > a,
  .element .dropdown-menu > li > a:focus,
  .element .dropdown-menu > li > a:hover {
    background-color: var(--btn-default-color) !important;
  }
  .element .dropdown-menu li a {
    color: var(--linkHoverLight-color) !important;
    font-size : 12px !important;
    line-height: 15px;
  }
  /* translation trick */
  .dropdown-menu .bt_addAction {
    text-transform: lowercase
  }
  .dropdown-menu .bt_addAction::first-letter {
    text-transform: uppercase
  }
/* ... */

